[gd_scene load_steps=5 format=3 uid="uid://sr2rf10b074"]

[ext_resource type="Texture2D" uid="uid://cucbqt8f2wwc" path="res://assets/sprites/tilemaps/room_objects.png" id="1_42nlc"]
[ext_resource type="Script" path="res://scenes/gamestates/dungon/interactables/money/Money.gd" id="1_yvdlg"]
[ext_resource type="AudioStream" uid="uid://c2107i1cn5irp" path="res://assets/sfx/coin.wav" id="3_ffjvo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mibn0"]
radius = 7.0

[node name="Money" type="Area2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource("1_yvdlg")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_42nlc")
hframes = 5
vframes = 4
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mibn0")

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ffjvo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="CoinSound" to="." method="_on_coin_sound_finished"]
